Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/lambda/MethodReference38.out
MethodReference38.java:24:18: compiler.err.abstract.cant.be.instantiated: MethodReference38.A
MethodReference38.java:25:18: compiler.err.abstract.cant.be.instantiated: MethodReference38.I
MethodReference38.java:26:18: compiler.err.abstract.cant.be.instantiated: MethodReference38.AC
MethodReference38.java:27:18: compiler.err.enum.cant.be.instantiated
4 errors
